# crewaiagentesia

./: .env.example  README.md  pyproject.toml  requirements.txt
agents/: analyzer.py  data_loader.py  memory.py  orchestrator.py  visualization.py
config/: prompts.py  settings.py
tools/: csv_tools.py  memory_tools.py  plotting_tools.py
ui/: streamlit_app.py
utils/: helpers.py  validators.py
