[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csv-agent-system"
version = "1.0.0"
description = "Sistema de agentes de IA para análise conversacional de CSV com CrewAI"
authors = [{name = "AI Engineer", email = "engineer@example.com"}]
readme = "README.md"
requires-python = ">=3.9,<3.13"
keywords = ["ai", "agents", "csv", "analysis", "crewai", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "crewai>=0.80.0",
    "streamlit>=1.39.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "google-generativeai>=0.8.0",
    "supabase>=2.7.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "chromadb>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0"
]

[project.urls]
Homepage = "https://github.com/username/csv-agent-system"
Repository = "https://github.com/username/csv-agent-system"
Documentation = "https://github.com/username/csv-agent-system/README.md"

[project.scripts]
csv-agent = "csv_agent_system.ui.streamlit_app:main"

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "flake8>=6.0.0", 
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0"
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = "\.pyi?$"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
